--- a/less/content.less
+++ b/less/content.less
@@ -441,8 +441,7 @@
 		}
 	}
 
-	.block-system .block-panel .search-form,
-	.block-search .block-panel {
+	.block-system .block-panel .search-form {
 		margin-bottom: 25px;
 
 		.form-control {
