--- a/less/header.less
+++ b/less/header.less
@@ -1,172 +1,215 @@
-.navbar {
-	border-width: 0px;
-	margin-bottom: 45px;
+.navbar.container {
+  margin-top: 0;
+  padding: 0;
+  max-width: 100%;
+
+  > .container {
+    .container-fixed();
+
+    @media (min-width: @screen-sm-min) {
+      width: @container-sm;
+    }
+    @media (min-width: @screen-md-min) {
+      width: @container-md;
+    }
+    @media (min-width: @screen-lg-min) {
+      width: @container-lg;
+    }
+  }
+
+  .navbar-brand {
+    margin-left: 0;
+  }
 }
 
-#navbar {
-	.navbar-header {
-		.make-xs-column(12);
-		.make-sm-column(4);
-		.make-md-column(4);
-		.make-lg-column(4);
+.navbar-default {
+  margin-bottom: (2*@line-height-computed);
+  border: 0;
+  width: 100%;
+  background-color: @header-bg;
 
-		padding-left: 25px;
+  p {
+    margin: 0;
+  }
 
-		.logo {
-			// Mobile:
-				display: inline-block;	/* http://soqr.fr/testsvg/embed-svg-liquid-layout-responsive-web-design.php */
-				position: relative;
-				width: 85%;
-				max-width: 360px;
-				padding-bottom: 12.3%;	/* 126px / 876px * 85% */
-			@media screen and (min-width: 460px) {
-				padding-bottom: 86px;	/* 126px / 876px * 360px */
-			}
-			@media @tablet {
-				width: 100%;
-				padding-bottom: 14.4%;  /* 126px / 876px * 100% */
-			}
-			
-			object {
-				display: block;
-				position: absolute;
-				width: 100%;
-				top: 0;
-				left: 0;
-				pointer-events: none; /* http://stackoverflow.com/questions/11374059/make-an-html-svg-object-also-a-clickable-link */
-			}
-			
-			img {
-				.img-responsive;
-			}
-		}
-	}
+  .navbar-brand,
+  .navbar-brand:hover,
+  .navbar-brand:focus {
+    color: @brand-primary;
+  }
 
-	.navbar-collapse {
-		.make-xs-column(12);
-		.make-sm-column(8);
-		.make-md-column(8);
-		.make-lg-column(8);
+  .navbar-collapse {
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    background-color: white;
+    width: (10 * @grid-gutter-width);
+    max-width: 100%;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    overflow-y: unset;
 
-		padding: 0;
-		max-height: none;
-		
-		&.in {
-			overflow-x: hidden;
-			overflow-y: hidden;
+    &.panel-group {
+      .panel {
+        border: 0;
+      }
 
-			.city-menu {
-				// Mobile
-					height: 300px;
-				@media @tablet {
-					height: auto;
-				}
-			}
-		}
+      .panel + .panel{
+        margin-top: 0;
+      }
+    }
 
-		.navbar-nav {
-			// Mobile:
-				margin-left: 0;
-				padding-left: (@grid-gutter-width / 2);
-				width: 100%;
-			@media @wide {
-				margin-left: 25%;
-				width: 75%;
-			}
+    nav {
+      padding: (3 * @line-height-computed) 0 @line-height-computed;
+    }
 
-			.active {
-				font-weight: bold;
-				background-color: inherit;
-			}
+    .navbar-nav {
+      margin: 0;
 
-			.leaf {
-				@media @tablet {
-					float: right;
-				}
+      > .leaf {
+        > a,
+        > a:hover,
+        > a:focus {
+        }
+      }
 
-				a {
-					font-size: @font-size-h2;
-					// Mobile:
-						padding: (@grid-gutter-width / 2) 0px 0px (@grid-gutter-width / 2);
-					@media @tablet {
-						padding: (@grid-gutter-width / 2) 0px 0px @grid-gutter-width;
-					}
-				}
-			}
-		}
+      > .active {
+        > a,
+        > a:hover,
+        > a:focus {
+          font-weight: bold;
+        }
+      }
 
-		.region-navigation {
-			.make-row();
+      > .leaf {
+        > a {
+          padding: 0 floor(@grid-gutter-width/2);
+          line-height: (2*@line-height-computed);
+          font-size: 18px; // todo: @font-size-h4;
+          text-transform: uppercase;
+        }
+      }
 
-			// Mobile:
-				margin-left: 0px;
-				margin-right: 0px;
-			@media @tablet {
-				margin-left: -5px;
-				margin-right: (@grid-gutter-width / -2);
-			}
+      > .leaf.first {
+        > a {
+          padding-top: @line-height-computed;
+        }
+      }
 
-			.city-menu {
-				.make-xs-column(6);
-				.make-sm-column(3*12/8);
-				.make-md-column(6);
-				.make-lg-column(3*12/8);
-				.make-lg-column-offset(2*12/8);
+      > .leaf.last {
+        > a {
+        }
+      }
+    }
+  }
 
-				margin-bottom: 0;
+  .navbar-header {
+    .make-row();
 
-				.block-panel {
-					margin-top: 45px;
+    padding: @line-height-computed 0 0;
 
-					.btn-group {
-						width: 100%;
+    .logo {
+      .make-xs-column(5);
+      @media (min-width: @screen-xs-min) {
+        width: (7/12*100%);
+      }
+      .make-sm-column(6);
+      .make-md-column(4);
 
-						.btn {
-							width: 100%;
-							height: 40px;
-							border-radius: 20px;
-							font-size: 20px;
-							line-height: 1.33333;
-							padding: 0px 16px;
-						}
-					}
-				}
-			}
+      margin: 0;
+      height: (4 * @line-height-computed);
 
-			.block-search {
-				.make-xs-column(6);
-				.make-sm-column(5*12/8);
-				.make-md-column(6);
-				.make-lg-column(3*12/8);
+      // Align visible top of logo with visible top of navbar-toggle
+      padding-top: 9px;
 
-				margin: 0px;
+      img,
+      object {
+        width: 100%;
+        pointer-events: none;
+      }
+    }
 
-				.block-panel {
-					margin-top: 45px;
+    .logo.horizontal {
+      // Mobile:
+        display: none;
+      @media (min-width: @screen-xs-min) {
+        display: inline;
+      }
+    }
 
-					.form-control {
-						height: 40px;
-						color: @cbf-light-grey;
-						border-radius: 20px 0 0 20px;
-						border-color: lighten(@cbf-dark-blue, 15%);
-						float: right;
-						width: 100%;
-					}
+    .logo.vertical {
+      // Mobile:
+        display: inline;
+      @media (min-width: @screen-xs-min) {
+        display: none;
+      }
 
-					.form-group {
-						margin-bottom: 0;
-					}
+      img,
+      object {
+        max-width: (3*@grid-gutter-width);
+      }
+    }
 
-					.btn {
-						height: 40px;
-						color: white;
-						border-radius: 0 20px 20px 0;
-						padding: 6px 20px 6px 12px;
-					}
-				}
-			}
-		}
-	}
+    .navbar-toggles {
+      .make-xs-column(7);
+      @media (min-width: @screen-xs-min) {
+        width: (5/12*100%);
+      }
+      .make-sm-column(6);
+      .make-md-column(8);
+
+      .navbar-toggle {
+        color: @brand-primary;
+        background-color: transparent;
+        z-index: 2;
+        padding: 0;
+        margin: 0;
+        border-width: 0;
+        border-radius: 0;
+
+        .fa-fw {
+          width: 1em;
+        }
+
+        // Mobile:
+          // Since the .fa-fw icon is 1em wide, the width is the padding-left plus the font-size
+          padding-left: floor(3/2*@grid-gutter-width) - 30px; // todo: @font-size-h2;
+          font-size: 30px; // todo: @font-size-h2;
+        @media (min-width: @screen-sm-min) {
+          padding-left: (2*@grid-gutter-width) - 30px; // todo: @font-size-h2;
+        }
+        @media (min-width: @screen-md-min) {
+          padding-left: (2*@grid-gutter-width) - 36px; // todo: @font-size-h1;
+          font-size: 36px; // todo: @font-size-h1;
+        }
+
+        &:hover,
+        &:focus {
+          color: @brand-ternary;
+        }
+      }
+    }
+  }
+}
+
+.block.block-search {
+  float: none;
+  margin: 0 floor(@grid-gutter-width/2);
+  padding-top: @line-height-computed;
+
+  .form-control {
+    height: (2 * @line-height-computed);
+    padding: (floor(@line-height-computed/2) - 1) floor(@grid-gutter-width/2); /* 1px border */
+  }
+
+  .btn {
+    padding: (floor(@line-height-computed/2) - 1) floor(@grid-gutter-width/2); /* 1px border */
+  }
+
+  .form-group {
+    margin: 0;
+  }
 }
 
 .city-adelaide,
