--- a/less/variables.less
+++ b/less/variables.less
@@ -25,11 +25,14 @@
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
 @brand-primary:         @cbf-dark-blue;
+@brand-secondary:       @cbf-light-blue;
+@brand-ternary:         average(@brand-primary, @brand-secondary);
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
 
+@header-bg:             #ffffff;
 
 //== Scaffolding
 //
@@ -336,7 +339,7 @@
 @grid-gutter-width:         30px;
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
-@grid-float-breakpoint:     @screen-sm-min;
+@grid-float-breakpoint:     4096px;
 //** Point at which the navbar begins collapsing.
 @grid-float-breakpoint-max: (@grid-float-breakpoint - 1);
 
@@ -873,6 +876,6 @@
 //** Width of horizontal description list titles
 @dl-horizontal-offset:        @component-offset-horizontal;
 //** Point at which .dl-horizontal becomes horizontal
-@dl-horizontal-breakpoint:    @grid-float-breakpoint;
+@dl-horizontal-breakpoint:    @screen-sm-min;
 //** Horizontal line color.
 @hr-border:                   @gray-lighter;
