--- a/less/content.less
+++ b/less/content.less
@@ -488,7 +488,8 @@
     }
   }
 
-  .views-field-title {
+  .views-field-title,
+  .views-field-field-title {
     // Mobile:
       font-weight: bold;
     @media (min-width: @screen-sm-min) {
@@ -497,12 +498,14 @@
   }
 
   .views-field-title,
+  .views-field-field-title,
   .views-field-field-subtitle {
     font-size: @font-size-large;
     line-height: @line-height-large;
   }
 
   .views-field-title,
+  .views-field-field-title,
   .views-field-field-subtitle,
   .views-field-field-order-url {
     padding-left: 0 !important;
