--- a/css/editor.css
+++ b/css/editor.css
@@ -2,7 +2,7 @@
 
 .cke_editable,
 .cke_show_borders {
-  font-family: "Open Sans",​Helvetica,​Arial,​sans-serif !important;
+  font-family: "Open Sans",Helvetica,Arial,sans-serif !important;
   line-height: normal !important;
   padding: 10px;
   max-width: 640px;
