Upgrade bootstrap to branch master-xmr-v3-fixes

--- a/bootstrap/less/normalize.less
+++ b/bootstrap/less/normalize.less
@@ -1,3 +1,5 @@
+// stylelint-disable
+
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 
 //
@@ -418,7 +420,7 @@ table {
   border-spacing: 0;
 }
 
-//td,
-//th {
-//  padding: 0;
-//}
+td,
+th {
+  padding: 0;
+}
