Format svg.svg-inline--fa in same way as an <i> element. Preparing for the upgrade to FontAwesome 5.7.2 Pro. Fontawesome 5.7.2 in 'JS + SVG' mode replaces <i> elements with an SVG.

--- a/less/content.less
+++ b/less/content.less
@@ -11,7 +11,8 @@
 		border-bottom: none;
 		display: flex;
 
-		i {
+		i,
+		svg.svg-inline--fa {
 			min-width: 50px;
 			margin-right: 10px;
 		}
@@ -176,7 +177,8 @@
 				border-radius: 9px 9px 0 0;
 				display: flex;
 
-				i {
+				i,
+				svg.svg-inline--fa {
 					min-width: 50px;
 					margin-right: 10px;
 				}
@@ -199,7 +201,8 @@
 				color: lighten(@cbf-dark-blue, 15%);
 				display: flex;
 
-				i {
+				i,
+				svg.svg-inline--fa {
 					min-width: 50px;
 					margin-right: 10px;
 					font-size: 39px;	// Make the icon the same size as the thumbnail
@@ -373,7 +376,8 @@
 				}
 
 				&.views-field-field-campus-find-us {
-					i {
+					i,
+					svg.svg-inline--fa {
 						margin-left: -70px;
 						width: 70px;
 						font-size: 18px;
@@ -435,7 +439,8 @@
 	.block-block .block-panel > h3 {
 		display: flex;
 
-		i {
+		i,
+		svg.svg-inline--fa {
 			min-width: 25px;
 			margin-right: 10px;
 		}
