--- a/less/footer.less
+++ b/less/footer.less
@@ -57,7 +57,8 @@
 					padding: 2px;
 					border-radius: 10px;
 
-					i {
+					i,
+					svg.svg-inline--fa {
 						font-size: 36px;
 					}
 				}
